# learning-platform-backend

./: .env.template  .gitignore  CONCEPT.md  Makefile  pyproject.toml
.cursor/rules/: project_rules.md
.github/workflows/: ci.yml
apps/: routers.py
apps/mental_health/: tests.py
apps/users/: utils.py
locale/en/LC_MESSAGES/: django.po
locale/uk/LC_MESSAGES/: django.po
templates/emails/: activation_email.html  chat_invitation_email.html  password_reset_email.html
